--- a/index.html
+++ b/index.html
@@ -3,13 +3,43 @@ rickskyxing.github.io
 
 访问： https://username.github.io
 
+<html>
 
----
-layout: post
-title: "Welcome to Jekyll!"
-date: 2018-03-31 02:36:26 +0800
-tags: [example]
----
+<body>
 
-...
-这里就可以使用markdown格式或其他格式写博客内容啦
+<p>每个表格由 table 标签开始。</p>
+<p>每个表格行由 tr 标签开始。</p>
+<p>每个表格数据由 td 标签开始。</p>
+
+<h4>一列：</h4>
+<table border="1">
+<tr>
+  <td>100</td>
+</tr>
+</table>
+
+<h4>一行三列：</h4>
+<table border="1">
+<tr>
+  <td>100</td>
+  <td>200</td>
+  <td>300</td>
+</tr>
+</table>
+
+<h4>两行三列：</h4>
+<table border="1">
+<tr>
+  <td>100</td>
+  <td>200</td>
+  <td>300</td>
+</tr>
+<tr>
+  <td>400</td>
+  <td>500</td>
+  <td>600</td>
+</tr>
+</table>
+
+</body>
+</html>
