--- a/index.html
+++ b/index.html
@@ -3,43 +3,22 @@ rickskyxing.github.io
 
 访问： https://username.github.io
 
+<!DOCTYPE HTML>
 <html>
 
 <body>
 
-<p>每个表格由 table 标签开始。</p>
-<p>每个表格行由 tr 标签开始。</p>
-<p>每个表格数据由 td 标签开始。</p>
+<p>
+一幅图像：
+<img src="/i/eg_mouse.jpg" width="128" height="128" />
+</p>
 
-<h4>一列：</h4>
-<table border="1">
-<tr>
-  <td>100</td>
-</tr>
-</table>
+<p>
+一幅动画图像：
+<img src="/i/eg_cute.gif" width="50" height="50" />
+</p>
 
-<h4>一行三列：</h4>
-<table border="1">
-<tr>
-  <td>100</td>
-  <td>200</td>
-  <td>300</td>
-</tr>
-</table>
-
-<h4>两行三列：</h4>
-<table border="1">
-<tr>
-  <td>100</td>
-  <td>200</td>
-  <td>300</td>
-</tr>
-<tr>
-  <td>400</td>
-  <td>500</td>
-  <td>600</td>
-</tr>
-</table>
+<p>请注意，插入动画图像的语法与插入普通图像的语法没有区别。</p>
 
 </body>
 </html>
